<resources>
    <string name="app_name">LearningUserInputs</string>
    <string name="toggle_turn_on">Turn On</string>
    <string name="toggle_turn_off">Turn Off</string>
    <string name="btnDisplay">Display</string>
    <string name="example_edittext">Example showing EditText</string>
    <string name="show_the_text">Show the Text</string>
    <string name="enter_text">text changes</string>
</resources>
