<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.learninguserinputs.MainActivity">

    <LinearLayout
        android:id="@+id/lnLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Input test" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/toggle_turn_off"
            android:textOn="@string/toggle_turn_on" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDisplay" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:text="@string/example_edittext" />

            <Button
                android:id="@+id/btnAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="40dp"
                android:text="@string/show_the_text" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnAddItem"
                android:layout_below="@+id/textView1"
                android:inputType="text"
                android:text="@string/enter_text"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtArray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="AutoCompleteTextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtDinaAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dynamic AutoCompleteTextView"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="Enter Text to Add"
                android:inputType="textPersonName"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="Button" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button1"
                android:layout_marginTop="40dp"
                android:hint="AutoCompleteTextView"
                android:textSize="20dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Android Spinner Example"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Select a Celebrity from the Dropdown List" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="How is everything?"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Excellent " />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Satisfactory" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Below Average" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClear"
                    android:text="Clear " />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSubmit"
                    android:text="Submit" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</ScrollView>
